<resources>
    <string name="app_name">OllerT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="don_t_get_otp_resend">Don\'t get OTP? <b>Resend</b></string>
    <string name="please_enter_the_verification_code_we_sent_to_972xxxxxxxxx">Please enter the verification code we sent to +972XXXXXXXXX</string>
    <string name="please_enter_your_phone_number_to_continue">Please enter your Phone Number to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="is_task_done">is task done</string>
    <string name="save_task">Save Task</string>
    <string name="select_date">SELECT DATE</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="task_name">Task Name</string>
    <string name="add_new_task">Add New Task</string>
    <string name="_972xxxxxxxxx">+972XXXXXXXXX</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="fullname">FullName</string>
</resources>